# pilar

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pilar.postman_collection.json  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: github-actions-demo.yml
src/: main.py
src/helpers/: enums.py  filters.py  http_response.py  status_code.py
src/middleware/: base_exception.py
src/routes/: api.py  web.py
src/schemas/: sort_schema.py  vowel_count.py  vowel_count_schema.py  words_schema.py
src/services/: sort_services.py  vowel_count_services.py  word_services.py
tests/: test_word_services.py
