[tool.poetry]
name = "pilar"
version = "0.1.0"
description = ""
authors = ["Willians Pereira <willians@4vconnect.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
flake8 = "^7.1.0"
pylint = "^3.2.5"
autopep8 = "^2.3.1"
black = "^24.4.2"
isort = "^5.13.2"
autoflake = "^2.3.1"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
